--- a/build.yaml
+++ b/build.yaml
@@ -1,30 +1,31 @@
----
 include:
-# Left keyboard - same for all modes (always peripheral)
-- board: nice_nano_v2
-  shield: charybdis_left
+  # Left keyboard - always peripheral
+  - board: nice_nano
+    shield: charybdis_left
 
-# Standalone mode - right keyboard is primary/central
-- board: nice_nano_v2
-  shield: charybdis_right_standalone
-  snippet: studio-rpc-usb-uart
-  cmake-args: -DCONFIG_ZMK_STUDIO=y
+  # Standalone mode - right is central
+  - board: nice_nano
+    shield: charybdis_right_standalone
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
 
-# Dongle mode - prospector dongle is primary/central with display, right is peripheral
-- board: nice_nano_v2
-  shield: charybdis_right_dongle
-- board: seeeduino_xiao_ble
-  shield: prospector_dongle prospector_adapter
-  snippet: studio-rpc-usb-uart
-  cmake-args: -DCONFIG_ZMK_STUDIO=y
+  # Dongle mode
+  - board: nice_nano
+    shield: charybdis_right_dongle
 
-# Settings reset for both board types
-- board: nice_nano_v2
-  shield: settings_reset
-- board: seeeduino_xiao_ble
-  shield: settings_reset
+  - board: seeeduino_xiao_ble
+    shield: prospector_dongle prospector_adapter
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
 
-# Tester Pro Micro
-- board: nice_nano_v2 # Replace with the Pro Micro-compatible board you're using
-  shield: tester_pro_micro
-  format: bt
+  # Settings reset for both board types
+  - board: nice_nano
+    shield: settings_reset
+
+  - board: seeeduino_xiao_ble
+    shield: settings_reset
+
+  # Tester Pro Micro
+  - board: nice_nano
+    shield: tester_pro_micro
+    format: bt
